deployed_apps/furacao3000/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: furacao3000
  labels:
    kubernetes.io/metadata.name: furacao3000
    backstage.io/kubernetes-id: furacao3000
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
